--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -23,19 +23,37 @@
         android:label="fragment_series"
         tools:layout="@layout/fragment_series" >
         <action
-            android:id="@+id/action_seriesFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
+            android:id="@+id/action_seriesFragment_to_detailSeriesFragment"
+            app:destination="@id/detailSeriesFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.grupo7.brasilflixapp.ui.fragments.detail.main.view.DetailSearchFragment"
+        android:name="com.grupo7.brasilflixapp.ui.fragments.detail.moviedetail.view.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail">
+        <action
+            android:id="@+id/action_detailFragment_to_VideosFragment"
+            app:destination="@id/VideosFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.grupo7.brasilflixapp.ui.fragments.favorites.view.FavoritesFragment"
         android:label="FavoritesFragment"
         tools:layout="@layout/fragment_favorites"/>
+    <fragment
+        android:id="@+id/VideosFragment"
+        android:name="com.grupo7.brasilflixapp.ui.fragments.videos.view.VideosFragment"
+        android:label="fragment_videos"
+        tools:layout="@layout/fragment_videos" />
+    <fragment
+        android:id="@+id/detailSeriesFragment"
+        android:name="com.grupo7.brasilflixapp.ui.fragments.detail.seriedetail.view.DetailSeriesFragment"
+        android:label="fragment_detail_series"
+        tools:layout="@layout/fragment_detail_series" >
+        <action
+            android:id="@+id/action_detailSeriesFragment_to_VideosFragment"
+            app:destination="@id/VideosFragment" />
+    </fragment>
 
 
 </navigation>
