--- a/app/src/main/res/layout/films.xml
+++ b/app/src/main/res/layout/films.xml
@@ -21,7 +21,7 @@
             android:layout_height="250dp"
             android:clickable="true"
             android:focusable="true"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
