--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -52,5 +52,47 @@
         app:layout_constraintTop_toBottomOf="@id/wtToolbar"
         tools:listitem="@layout/videos" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/notrailerCard"
+        style="@style/WatchCardDefault"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginTop="15dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/wtToolbar"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/reviewImage"
+                android:layout_width="@dimen/watch_card_img_width"
+                android:layout_height="@dimen/watch_card_img_height"
+                android:contentDescription="@string/media_poster"
+                android:scaleType="fitCenter"
+                android:src="@drawable/brflixlogo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/notrailerTitle"
+                style="@style/WatchCardTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/notrailer"
+                app:layout_constraintEnd_toStartOf="@id/reviewImage"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
