--- a/app/src/main/res/layout/reviews.xml
+++ b/app/src/main/res/layout/reviews.xml
@@ -5,7 +5,7 @@
     android:id="@+id/reviewCard"
     style="@style/WatchCardDefault"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     android:background="@drawable/gradiente">
 
     <androidx.constraintlayout.widget.ConstraintLayout
