--- a/app/src/main/res/layout/videos.xml
+++ b/app/src/main/res/layout/videos.xml
@@ -9,12 +9,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="120dp">
 
         <ImageView
             android:id="@+id/ivWatchImage"
-            android:layout_width="@dimen/watch_card_img_width"
-            android:layout_height="@dimen/watch_card_img_height"
+            android:layout_width="@dimen/trailer_card_img_width"
+            android:layout_height="@dimen/trailer_card_img_height"
             android:scaleType="fitCenter"
             android:src="@drawable/brflixlogo"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -50,9 +50,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintVertical_bias="1" />
-
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
