--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,9 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/topMenuHome"
                 app:menu="@menu/top_app_bar"
-                app:title="@string/page_home" />
+                app:title="@string/page_home"
+
+                />
 
         </com.google.android.material.appbar.AppBarLayout>
 
