Trailers Serie Fragment - Implemented

--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.changeEmail.ChangeEmailActivity"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
 
 
