--- a/app/src/main/res/layout/activity_my_preference.xml
+++ b/app/src/main/res/layout/activity_my_preference.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.myPreference.MyPreferenceActivity"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
