--- a/app/src/main/res/layout/favorites.xml
+++ b/app/src/main/res/layout/favorites.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="180dp"
-        android:layout_height="300dp">
+        android:layout_height="300dp"
+        android:background="@drawable/gradiente_externo">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fotoFilme"
