--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.account.accountFragment"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/buttonLogout"
