--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradiente"
+    android:background="@drawable/gradiente_externo"
     tools:context=".ui.fragments.detail.moviedetail.view.DetailFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainViewDetail"
         android:layout_width="match_parent"
-        android:background="@drawable/gradiente"
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
@@ -67,7 +66,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:showFullScreenButton="false"
+                app:showFullScreenButton="true"
                  />
 
             <ImageView
@@ -212,7 +211,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/gradiente_externo">
 
                 <ImageView
                     android:id="@+id/reviewImage"
