--- a/app/src/main/res/layout/fragment_detail_search.xml
+++ b/app/src/main/res/layout/fragment_detail_search.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.detail.moviedetail.view.DetailSearchFragment"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainViewDetail"
         android:layout_width="match_parent"
-        android:background="@drawable/gradiente"
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
