--- a/app/src/main/res/layout/fragment_detail_series.xml
+++ b/app/src/main/res/layout/fragment_detail_series.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.detail.seriedetail.view.DetailSeriesFragment"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainViewDetail"
         android:layout_width="match_parent"
-        android:background="@drawable/gradiente"
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
@@ -60,12 +59,23 @@
             app:layout_constraintTop_toBottomOf="@id/wtToolbar"
             app:shapeAppearanceOverlay="@style/roundimageview">
 
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/youtubePlayerDetail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:showFullScreenButton="true"
+                />
+
             <ImageView
                 android:id="@+id/imageCardDetail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/brflixlogo"
                 android:adjustViewBounds="true"
+                android:visibility="gone"
                 />
 
         </com.google.android.material.card.MaterialCardView>
