--- a/app/src/main/res/layout/fragment_home_image.xml
+++ b/app/src/main/res/layout/fragment_home_image.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.home.HomeImageFragment"
-    >
+    android:background="@drawable/gradiente_externo">
 
     <ImageView
         android:id="@+id/imgImageTabHome"
