--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.login.LoginFragment"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tf_nome"
