--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.profile.view.profileFragment"
-    android:background="@drawable/gradiente">
+    android:background="@drawable/gradiente_externo">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cvProfileItemContainer"
