--- a/app/src/main/res/layout/reviews.xml
+++ b/app/src/main/res/layout/reviews.xml
@@ -5,12 +5,12 @@
     android:id="@+id/reviewCard"
     style="@style/WatchCardDefault"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:background="@drawable/gradiente">
+    android:layout_height="90dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradiente_externo">
 
         <ImageView
             android:id="@+id/reviewImage"
