--- a/app/src/main/res/layout/videos.xml
+++ b/app/src/main/res/layout/videos.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="120dp"
+        android:background="@drawable/gradiente_externo">
 
         <ImageView
             android:id="@+id/ivWatchImage"
