--- a/app/src/main/res/layout/fragment_detail_search.xml
+++ b/app/src/main/res/layout/fragment_detail_search.xml
@@ -197,7 +197,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/gradiente_externo">
 
                 <ImageView
                     android:id="@+id/reviewImage"
