--- a/app/src/main/res/layout/fragment_favorites_movies.xml
+++ b/app/src/main/res/layout/fragment_favorites_movies.xml
@@ -18,8 +18,9 @@
             android:id="@+id/favoritesRecyclerViewMovies"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:itemCount="10"
