--- a/app/src/main/res/layout/videos.xml
+++ b/app/src/main/res/layout/videos.xml
@@ -5,7 +5,8 @@
     android:id="@+id/cvWatch"
     style="@style/WatchCardDefault"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradiente_externo">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
